@@ -1,3 +1,14 @@
+2011-07-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* Applied another patch by Murray:
+	  - src/wrapper_Descriptor.cpp: Add missing readASCIIFromConnection
+  	    C++ function that was called in read.R but not defined.
+	  - R/read.R: Remove an _ in the readASCII C++ functions to match the
+	    naming convention of the other nearby functions.
+          - man/readASCII.Rd: Add examples of ascii export/import of messages.
+	  - inst/unitTests/runit.addressbook.R: Add tests of ascii
+	    export/import of messages.
+
 2011-07-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/wrapper_FileDescriptor.cpp (rprotobuf): Applied patch by Murray
